fix(style/ui): resolve scroll bar overflow at mobile device resolution

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,25 +64,27 @@
 }
 
 @layer base {
-  *::-webkit-scrollbar {
-    width: 14px;
+  @media screen and (min-width: 640px) {
+    *::-webkit-scrollbar {
+      width: 14px;
+    }
   }
 
   *::-webkit-scrollbar-track {
-    @apply bg-transparent;
+    @apply sm:bg-transparent;
   }
 
   *::-webkit-scrollbar-thumb {
-    @apply bg-muted-foreground/30;
-    @apply rounded-full;
-    @apply border-2;
-    @apply border-r-4;
-    @apply border-solid;
-    @apply border-transparent;
-    @apply bg-clip-content;
+    @apply sm:bg-muted-foreground/30;
+    @apply sm:rounded-full;
+    @apply sm:border-2;
+    @apply sm:border-r-4;
+    @apply sm:border-solid;
+    @apply sm:border-transparent;
+    @apply sm:bg-clip-content;
   }
 
   *::-webkit-scrollbar-thumb:hover {
-    @apply bg-muted-foreground/50;
+    @apply sm:bg-muted-foreground/50;
   }
 }
